@@ -8,6 +8,9 @@ Core - General
   - Improvements to the {browser_lang} plugin.
   - Fixes a bug in the CmsLayoutTemplateQuery class.
   - Fixes a bug with the name= parameter in the {cms_stylesheet} plugin.
+  - Fixes a minor issue in system information (smarty compilecheck)
+  - Fixes a minor issue with the tabIndex and accesskey fields in edit content.
+  - Fixes issue in the CmsLayoutStylesheet class related to associating designs with new stylesheets.
 
 MicroTiny v2.2.3
   - More entropy in the mt_config.js filename to fix issues with js caching when switching users.
